--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "element-ui": "^2.15.13",
     "express": "4.17.1",
+    "express-jwt": "6.1.1",
+    "jsonwebtoken": "^9.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.2",
     "mysql": "^2.18.1",
