--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "default-passive-events": "^2.0.0",
     "echarts": "^5.4.2",
     "element-ui": "^2.15.13",
     "express": "4.17.1",
