--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "less-loader": "^11.1.2",
     "mysql": "^2.18.1",
     "vue": "^2.6.14",
-    "vue-router": "3.6.5"
+    "vue-router": "3.6.5",
+    "vuex": "3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
